--- a/views2/index.ejs
+++ b/views2/index.ejs
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+<%- include('./partials/head.ejs') %>
+
+<!-- <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Lesson | <%= title  %> </title>
-</head>
+</head> -->
 <body>
 
+<%- include('./partials/nav.ejs') %>
 
-    <nav>
+    <!-- <nav>
         <div class="site-title">
             <a href="/"><h1>Blog Lesson</h1></a>
             <p>A Lesson site</p>
@@ -19,7 +23,7 @@
             <li><a href="/about">About</a></li>
             <li><a href="/blogs/create">New Blog</a></li>
         </ul>
-    </nav>>
+    </nav>> -->
 
 
     <div class="blogs content">
@@ -38,6 +42,8 @@
     <% } %>
 
     </div>
+
+<%- include('./partials/footer.ejs') %>
 
 </body>
 </html>
