--- a/views2/about.ejs
+++ b/views2/about.ejs
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Lesson | <%= title %></title>
-</head>
+
+<%- include('./partials/head.ejs') %>
+
+    <!-- <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Blog Lesson | <%= title  %> </title>
+    </head> -->
 <body>
 
-    <nav>
+<%- include('./partials/nav.ejs') %>
+
+    <!-- <nav>
         <div class="site-title">
             <a href="/"><h1>Blog Lesson</h1></a>
             <p>A Lesson site</p>
@@ -18,7 +23,7 @@
             <li><a href="/about">About</a></li>
             <li><a href="/blogs/create">New Blog</a></li>
         </ul>
-    </nav>
+    </nav> -->
 
 
     <div class="about content">
@@ -28,6 +33,8 @@
         <p>Fighting!</p>
         
     </div>
+
+<%- include('./partials/footer.ejs') %>
 
 </body>
 </html>
