--- a/views2/about.ejs
+++ b/views2/about.ejs
@@ -28,8 +28,8 @@
 
     <div class="about content">
         <h2>About us</h2>
-        <p>I just started learning express yesterday and i look forward to becoming a tech engineer</p>
-        <p>My brother is guiding me on the right turorials to use, and we plan to write a project together when i get to a stage in this learning process</p>
+        <p>I just started learning express and coding generally. I look forward to becoming a tech engineer.</p>
+        <p>Web, frontend, backend, language/compiling, os, data scientist, mobile apps, desktop, development and operations, video games....developer</p>
         <p>Fighting!</p>
         
     </div>
