--- a/views2/partials/head.ejs
+++ b/views2/partials/head.ejs
@@ -4,4 +4,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Lesson | <%= title  %> </title>
+
+<style>
+     @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Domine:wght@400;500&display=swap');
+    body{
+        max-width: 1300px;
+        margin: 20px auto;
+        padding: 0 20px;
+        font-family: 'Domine';
+    }
+    p, h1, h2, h3, a, ul {
+        margin: 0;
+        padding: 0;
+        text-decoration: none;
+        color: black;
+    }
+    /* nav and footer styes */
+    nav{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 60px;
+        padding-bottom: 10px;
+        border-bottom: 10px salmon;
+        text-transform: uppercase;
+    }
+    nav ul{
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+    nav li{
+        list-style-type: none;
+        margin-left: 20px;
+    }
+    nav h1{
+        font-size: 2.5cm;
+    }
+    nav p, nav a{
+        color: black;
+        font-weight: 300;
+    }
+    footer{
+        color: rgba(30, 33, 210, 0.534);
+        text-align: center;
+        margin: 80px auto 20px;
+    }
+    h2{
+        margin-bottom: 40px;
+        font-size: 1cm;
+    }
+    h3{
+        text-transform: capitalize;
+        margin-bottom: 8px;
+    }
+    .content{
+        margin-left: 20px;
+    }
+
+    /* index styles
+    details styles
+    create styles */
+
+    .create-blog form{
+        max-width: 400px;
+        margin: 0 auto;
+    }
+    .create-blog input,
+    .create-blog textarea{
+        display: block;
+        width: 100%;
+        margin: 10px 0;
+        padding: 8px;
+    }
+    .create-blog label{
+        display: block;
+        margin-top: 24px;
+    }
+    textarea{
+        height: 120px;
+    }
+    .create-blog button{
+        margin-top: 20px;
+        background: rgb(20, 113, 220);
+        color: white;
+        padding: 6px;
+        border: 0;
+        font-size: 1.2cm;
+        cursor: pointer;
+    }
+</style>
+
 </head>
